--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ SWAP
 <nav class="navbar navbar-expand-sm bg-light">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="https://coinswap.click">Coin Swap</a>
+      <a class="navbar-brand" href="https://coinswap.click">Portico Exchange</a>
     </div>
     <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" href="https://coinswap.click/convert/">Convert</a></li>
@@ -138,11 +138,11 @@ SWAP
 
   <option value="BTC-LN">Bitcoin (Lightning)</option>
 
-  <option value="DASH">Dash</option>
+  <option value="LBTC">Liquid Bitcoin</option>
 
-  <option value="LTC">Litecoin</option>
+  <option value="USDT">Liquid USDT</option>
 
-  <option value="XMR">Monero</option>
+  <option value="USDT">LN-USDT</option>
 
 </select>
                     
